# Test_IFL_Simulation

./: README.md  Segmentation_decimated_better.stl  Segmentation_decimated_better_points_normals.csv  stl_to_pointcloud.py
cloudpoint/: README.md  Segmentation_decimated_better_points.ply  stl_to_pointcloud.py
iiwa_probe_utils/: CMakeLists.txt  package.xml
iiwa_probe_utils/launch/: demo_with_tool.launch  demo_with_tool_env.launch  demo_with_tool_env_iiwa_stack.launch
iiwa_probe_utils/scripts/: add_patient_mesh.py  add_patient_mesh_on_table.py  attach_probe_collision.py  attach_tool_mesh.py  decimate_open3d.py  go_to_pose_once.py  log_probe_tip_csv.py  plan_execute_sweep.py  preposition_probe.py  quadric_decimate_10pct.mlx  raster_sweep_moveit.py  raster_sweep_moveit_normals.py  raster_sweep_moveit_normals_anyray.py  serpentine_surface_scan.py  spawn_static_scene.py  spawn_static_scene_iiwa.py  tiny_line_sweep.py  touch_patient_once.py
